@@ -20,8 +20,8 @@ if ( $id > 0 ) {
   }
 
   // Email participants to notify that it was rejected.
-  $sql = "SELECT webcal_entry_user.cal_login, webcal_user.cal_lastname, " .
-    "webcal_user.cal_email " .
+  $sql = "SELECT webcal_entry_user.cal_login, webcal_user.cal_firstname, " .
+    "webcal_user.cal_lastname, webcal_user.cal_email " .
     "FROM webcal_entry_user, webcal_user " .
     "WHERE webcal_entry_user.cal_id = $id AND " .
     "webcal_entry_user.cal_login = webcal_user.cal_login ";
@@ -31,17 +31,29 @@ if ( $id > 0 ) {
     while ( $row = dbi_fetch_row ( $res ) ) {
       if ( $row[0] != $login ) {
 	$partlogin[] = $row[0];
-	$partname[] = $row[1];
-	$partemail[] = $row[2];
+        if ( strlen ( $row[1] ) && strlen ( $row[2] ) )
+	  $partname[] = "$row[1] $row[2] ($row[0])";
+        else
+	  $partname[] = $row[0];
+	$partemail[] = $row[3];
       }
       if ( $row[0] == $login ) {
-	$rejname = $row[1];
-	$rejemail = $row[2];
+        if ( strlen ( $row[1] ) && strlen ( $row[2] ) )
+	  $rejname = "$row[1] $row[2] ($row[0])";
+        else
+	  $rejname = $row[0];
+	$rejemail = $row[3];
       }
     }
     dbi_free_result($res);
   }   
-  
+
+  // find out which want email for this
+  for ( $i = 0; $i < count ( $partlogin ); $i++ ) {
+    $sendmail[$i] = get_pref_setting ( $partlogin[$i],
+      "EMAIL_EVENT_REJECTED" );
+  }
+
   // Get the name of the event
   $sql = "SELECT cal_name FROM webcal_entry WHERE cal_id = $id";
   $res = dbi_query ( $sql );
@@ -52,19 +64,22 @@ if ( $id > 0 ) {
   }
 
   for ( $i = 0; $i < count ( $partlogin ); $i++ ) {
-    $msg = translate("Hello") . ", " . $partname[$i] . ".\n\n" .
-      translate("An appointment has been rejected by") .
-      " " . $rejname .  ". " .
-      translate("The subject was") . " \"" . $name . "\"\n\n";
+    if ( $sendmail[$i] == "Y" ) {
+      $msg = translate("Hello") . ", " . $partname[$i] . ".\n\n" .
+        translate("An appointment has been rejected by") .
+        " " . $rejname .  ". " .
+        translate("The subject was") . " \"" . $name . "\"\n\n";
  
-    if ( strlen ( $rejemail ) )
-      $extra_hdrs = "From: $rejemail\nX-Mailer: " . translate("Title");
-    else
-      $extra_hdrs = "X-Mailer: " . translate("Title");
+      $from = $GLOBALS["email_fallback_from"];
+      if ( strlen ( $rejemail ) )
+        $from = rejemail;
 
-    mail ( $partemail[$i],
-      translate("Title") . " " . translate("Notification") . ": " . $name,
-      $msg, $extra_hdrs );
+      $extra_hdrs = "From: $from\nX-Mailer: " . translate("Title");
+
+      mail ( $partemail[$i],
+        translate("Title") . " " . translate("Notification") . ": " . $name,
+        $msg, $extra_hdrs );
+    }
   }
   
 
